--- a/ui/schedule.ui
+++ b/ui/schedule.ui
@@ -60,6 +60,9 @@ opacity : 1;</string>
       <height>41</height>
      </rect>
     </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
     <property name="styleSheet">
      <string notr="true">border : 0;
  border-radius:10px</string>
@@ -87,6 +90,9 @@ opacity : 1;</string>
       <height>41</height>
      </rect>
     </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
     <property name="styleSheet">
      <string notr="true">border : 0;
  border-radius:10px; color : black;</string>
@@ -109,6 +115,9 @@ opacity : 1;</string>
       <width>41</width>
       <height>41</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="styleSheet">
      <string notr="true">border : 0;
@@ -651,6 +660,9 @@ border-radius : 20px;</string>
          <height>61</height>
         </size>
        </property>
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
        <property name="styleSheet">
         <string notr="true">border:0px; border-radius:10px;</string>
        </property>
@@ -669,6 +681,9 @@ border-radius : 20px;</string>
          <width>121</width>
          <height>61</height>
         </size>
+       </property>
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
        </property>
        <property name="styleSheet">
         <string notr="true">border:0px; border-radius:10px;</string>
@@ -689,6 +704,9 @@ border-radius : 20px;</string>
          <height>61</height>
         </size>
        </property>
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
        <property name="styleSheet">
         <string notr="true">border:0px; border-radius:10px;</string>
        </property>
@@ -707,6 +725,9 @@ border-radius : 20px;</string>
          <width>121</width>
          <height>61</height>
         </size>
+       </property>
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
        </property>
        <property name="styleSheet">
         <string notr="true">border:0px; border-radius:10px;</string>
